--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
           <artifactId>commons-lang3</artifactId>
           <version>3.12.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.26</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <build>
     <finalName>ADDITIONAL_JDBC</finalName>
